--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -65,12 +65,12 @@
                 <li>
                     A curated selection of future nostalgia Est. 2022
                 </li>
-<!--                <li>-->
-<!--                    <ul>-->
-<!--                        <li><a href="https://twitter.com/variousaccidents">Twitter</a></li>-->
-<!--                        <li><a href="https://www.instagram.com/variousaccidents">Instagram</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
+                <li>
+                    <ul>
+                        <li><a href="https://twitter.com/variacci">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/variousaccidents">Instagram</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
