--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
     <meta title=”description” content="A curated selection of future nostalgia Est. 2022">
 
     <!--Open Graph Meta-->
-    <meta property="og:title" content="I Need To Get Some Work Done"/>
+    <meta property="og:title" content="Various Accidents"/>
     <meta property="og:type" content="website"/>
 <!--    <meta property="og:image" content="images/intgswd-logo-type.png"/>-->
 
