--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,11 @@
 <html>
 
 <head>
+
+<!--AdSense-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5179328788140758"
+     crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
