twitter card test

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,10 +23,10 @@
 
     <!--Twitter meta-->
     <meta name="twitter:title" content="Various Accidents">
-    <meta name="twitter:card" content="apple-touch-icon.png">
-    <meta name="twitter:site" content="@pedestriantac">
-    <meta name="twitter:creator" content="@pedestriantac">
+    <meta name="twitter:site" content="@variacci">
+    <meta name="twitter:creator" content="@variacci">
     <meta name="twitter:description" content="A curated selection of future nostalgia Est. 2022">
+    <meta name="twitter:card" content="summary"></meta>
 
     <!--
         Favicons and code below have been generated from:
