--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@ layout: base
     <div class="box">
         <div class="section-header">
             {{ page.date | date: "%-m/%-d/%Y" }}
+            
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            
         </div>
             {{ page.content }}
         </p>
