--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,6 +17,11 @@
     <!--If the current page doesn't have a title, the file name is used-->
     <title>Various Accidents</title>
     <meta title=”description” content="A curated selection of future nostalgia Est. 2022">
+    
+   <meta property="og:title" content="Various Accidents" />
+   <meta property="og:description" content="{{ page.description }}" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="{{ page.image }}" />
 
 
     <!--
