--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,6 +23,12 @@
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{{ page.image }}" />
 
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="">
+<meta name="twitter:title" content="Various Accidents">
+<meta name="twitter:description" content="{{ page.description }}">
+<meta name="twitter:image" content="{{ page.image }}">
+
 
     <!--
         Favicons and code below have been generated from: 
