--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,15 +19,15 @@
     <meta title=”description” content="A curated selection of future nostalgia Est. 2022">
     
    <meta property="og:title" content="Various Accidents" />
-   <meta property="og:description" content="{{ post.description }}" />
+   <meta property="og:description" content="{{ page.description }}" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="{{ post.image }}" />
+<meta property="og:image" content="{{ page.image }}" />
 
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
 <meta name="twitter:title" content="Various Accidents">
-<meta name="twitter:description" content="{{ post.description }}">
-<meta name="twitter:image" content="{{ post.image }}">
+<meta name="twitter:description" content="{{ page.description }}">
+<meta name="twitter:image" content="{{ page.image }}">
 
 
     <!--
