--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,11 +22,12 @@
    <meta property="og:description" content="{{ page.description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{{ page.image }}" />
+<meta property="og:image:secure_url" content="{{ page.image }}" />
 
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
 <meta name="twitter:title" content="Various Accidents">
-<meta name="twitter:description" content="{{ page.description }}">
+<meta name ="twitter:description" content="{{ page.description }}">
 <meta name="twitter:image" content="{{ page.image }}">
 
 
