--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,16 +18,14 @@
     <title>Various Accidents</title>
     <meta title=”description” content="A curated selection of future nostalgia Est. 2022">
     
-   <meta property="og:title" content="Various Accidents" />
-   <meta property="og:description" content="{{ page.description }}" />
+   <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{{ page.image }}" />
 <meta property="og:image:secure_url" content="{{ page.image }}" />
 
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
-<meta name="twitter:title" content="Various Accidents">
-<meta name ="twitter:description" content="{{ page.description }}">
+<meta name="twitter:title" content="{{ page.title }}">
 <meta name="twitter:image" content="{{ page.image }}">
 
 
