--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,10 +13,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!--SITE META-->
-
-    <!--If the current page doesn't have a title, the file name is used-->
-    <title>Various Accidents</title>
-    <meta title=”description” content="A curated selection of future nostalgia Est. 2022">
+    
+<!--    <title>Various Accidents</title>-->
+<!--    <meta title=”description” content="A curated selection of future nostalgia Est. 2022">-->
     
    <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:type" content="website" />
