--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,8 +14,7 @@
 
     <!--SITE META-->
     
-<!--    <title>Various Accidents</title>-->
-<!--    <meta title=”description” content="A curated selection of future nostalgia Est. 2022">-->
+    <title>{{page.title}}, Various Accidents</title>
     
    <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:type" content="website" />
