--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,6 +17,7 @@
     <title>{{page.title}}, Various Accidents</title>
     
    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:title" content="{{ page.description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{{ page.image }}" />
 <meta property="og:image:secure_url" content="{{ page.image }}" />
@@ -24,6 +25,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
 <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ page.description }}">
 <meta name="twitter:image" content="{{ page.image }}">
 
 
