--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,18 +14,18 @@
 
     <!--SITE META-->
     
-    <title>{{page.title}}, Various Accidents</title>
+    <title>{% if page.title %}{{ page.title }}, Various Accidents{% else %}Various Accidents{% endif %}</title>
     
-   <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:title" content="{{ page.description }}" />
+   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Various Accidents{% endif %}" />
+    <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}A curated selection of future nostalgia Est. 2022{% endif %}" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="{{ page.image }}" />
 <meta property="og:image:secure_url" content="{{ page.image }}" />
 
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
-<meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ page.description }}">
+<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}Various Accidents{% endif %}">
+    <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}A curated selection of future nostalgia Est. 2022{% endif %}">
 <meta name="twitter:image" content="{{ page.image }}">
 
 
