--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: base
         <div class="section-header">
             {{ page.date | date: "%-m/%-d/%Y" }}
         </div>
-        <h1>{{ page.description }}</h1>
+        <h1>{{ page.title }}</h1>
             {{ page.content }}
         </p>
     </div>
