change to post slug

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: base
                 {% assign page_identifier = page.date | append: page.slug %}
                 <a href="{% if post_identifier != page_identifier %}{{ post.url }}{% endif %}"
                     class="{% if post_identifier == page_identifier %}active{% endif %}">
-                    {{ post.date | date: "%-m/%-d/%Y" }} {{ post.title }}
+                    {{ post.date | date: "%-m/%-d/%Y" }} {{ post.slug }}
                 </a>
             </li>
             {% endfor %}
