--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,32 +3,37 @@ layout: base
 ---
 
 <div id="page" class="left-major">
-    <div class="box">
-        <div class="section-header">
-            {{ page.date | date: "%-m/%-d/%Y" }}
-        </div>
-        <h1>{{ page.header }}</h1>
-            {{ page.content }}
-        </p>
-    </div>
+	<div class="box">
+		<div class="section-header">
+			<h3>
+				{{ page.date | date: "%-m/%-d/%Y" }}
+			</h3>
+		</div>
+		<h1>{{ page.header }}</h1>
+		{{ page.content }}
+		</p>
+	</div>
 </div>
 
 <div id="archive" class="right-minor">
-    <div class="box">
-        <div class="section-header">
-            Archive
-        </div>
-        <ul>
-            {% for post in site.posts %}
-            <li>
-                {% assign post_identifier = post.date | append: post.slug %}
-                {% assign page_identifier = page.date | append: page.slug %}
-                <a href="{% if post_identifier != page_identifier %}{{ post.url }}{% endif %}"
-                    class="{% if post_identifier == page_identifier %}active{% endif %}">
-                    {{ post.date | date: "%-m/%-d/%Y" }} {{ post.title }}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+	<div class="box">
+		<div class="section-header">
+			<h3>Archive</h3>
+		</div>
+		<ul>
+			{% for post in site.posts %}
+			<li>
+				{% assign post_identifier = post.date | append: post.slug %}
+				{% assign page_identifier = page.date | append: page.slug %}
+				<a href="{% if post_identifier != page_identifier %}{{ post.url }}{% endif %}"
+					class="{% if post_identifier == page_identifier %}active{% endif %}">
+
+					<!-- {{ post.date | date: "%-m/%-d/%Y" }}  -->
+					{{ post.title }}
+
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 </div>
